[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/blue_laser.gd" type="Script" id=1]
[ext_resource path="res://art/weapons/blue_laser.png" type="Texture" id=2]
[ext_resource path="res://sound/laser1.ogg" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 2.57706
height = 42.0644

[node name="blue_laser" type="Area2D"]

position = Vector2( 506.662, 288.016 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 1000

[node name="Sprite" type="Sprite" parent="." index="0"]

z_index = 1
texture = ExtResource( 2 )
_sections_unfolded = [ "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="lifetime" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 3 )
volume_db = 10.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="lasersoundtimeout" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.14
one_shot = false
autostart = true

[connection signal="body_entered" from="." to="." method="_on_blue_laser_body_entered"]

[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]

[connection signal="timeout" from="lasersoundtimeout" to="." method="_on_lasersoundtimeout_timeout"]


